--- a/index.html
+++ b/index.html
@@ -10,28 +10,25 @@
   <body>
     <section>
       <div class="container">
-        <div class="calendar-container">
-        <div class="navigation">
-          <button id="prev">←</button>
-          <span id="currentMonthAndYear"></span>
-          <button id="next">→</button>
+        <div class="add-task-container">
+          <form id="addTask">
+            <input type="text" placeholder="Enter a task"  id="addTaskInput"/>
+            <button type="submit">Add task</button>
+          </form>
+          <div class="filter-task-container">
+            <label for="taskFilter" class="custom-select">
+              <select id="taskFilter" name="taskFilter">
+                <option value="all" selected>All</option>
+                <option value="done">Done</option>
+                <option value="not done">Not Done</option>
+              </select>
+            </label>
+          </div>
         </div>
-        <div id="calendar">
-          
+        <div>
+            <ul id="tasks"></ul>
         </div>
-      </div>
-      <div class="event-container">
-        <div class="event-section">
-          <h2 id="selected-date">Виберіть дату</h2> 
-          <ul id="event-list"></ul>
-        </div>
-        <form id="add-event-form">
-          <input type="text" id="add-event-title" placeholder="Event name" required>
-          <button type="submit">Add event</button>
-        </form>
-      </div>
-      </div>
+      </div>      
     </section>
-   
   </body>
 </html>
