added task-4 from DOM-manipulation

--- a/index.html
+++ b/index.html
@@ -8,25 +8,12 @@
     <script src="app.js" defer></script>
   </head>
   <body>
-    <section>
-      <div class="container">
-        <div class="add-contact-container">
-          <form id="addContact">
-            <input type="text" placeholder="Enter a name" id="addName" />
-            <input
-              type="number"
-              placeholder="Enter phone number"
-              id="addPhoneNumber" />
-            <button type="submit">Add number</button>
-          </form>
-        </div>
-        <div class="search-container">
-          <input type="text" placeholder="search" id="searchInput" />
-        </div>
-        <div>
-          <ul id="contacts"></ul>
-        </div>
+    <div class="comment-section">
+      <div class="comment-form">
+        <textarea id="new-comment-text" placeholder="Your comment"></textarea>
+        <button id="add-comment-btn">Add comment</button>
       </div>
-    </section>
+      <ul id="comments-list"></ul>
+    </div>
   </body>
 </html>
