added first task from google docs

--- a/index.html
+++ b/index.html
@@ -8,12 +8,29 @@
     <script src="app.js" defer></script>
   </head>
   <body>
-    <div class="comment-section">
-      <div class="comment-form">
-        <textarea id="new-comment-text" placeholder="Your comment"></textarea>
-        <button id="add-comment-btn">Add comment</button>
-      </div>
-      <ul id="comments-list"></ul>
-    </div>
+    <div class="game-info">
+      <h2>Player</h2>
+      <p>Name: <span id="player-name"></span></p>
+      <p>Health: <span id="player-health"></span></p>
+      <p>Strength: <span id="player-strength"></span></p>
+      <p>Potions: <span id="player-potions"></span></p>
+      <p>Level: <span id="player-level"></span></p>
+      <p>Inventory: <span id="player-inventory"></span></p>
+  </div>
+
+  <div class="game-info">
+      <h2>Monster</h2>
+      <p>Type: <span id="monster-type"></span></p>
+      <p>Health: <span id="monster-health"></span></p>
+      <p>Strength: <span id="monster-strength"></span></p>
+  </div>
+
+  <div class="actions">
+      <button id="attack-button">Attack</button>
+      <button id="use-item-or-heal-button">Use item or heal</button>
+      <button id="reload-button">Reload</button>
+  </div>
+
+  <div class="battle-log" id="battle-log"></div>
   </body>
 </html>
