--- a/index.html
+++ b/index.html
@@ -8,29 +8,43 @@
     <script src="app.js" defer></script>
   </head>
   <body>
-    <div class="game-info">
-      <h2>Player</h2>
-      <p>Name: <span id="player-name"></span></p>
-      <p>Health: <span id="player-health"></span></p>
-      <p>Strength: <span id="player-strength"></span></p>
-      <p>Potions: <span id="player-potions"></span></p>
-      <p>Level: <span id="player-level"></span></p>
-      <p>Inventory: <span id="player-inventory"></span></p>
-  </div>
+    <div class="container">
+      <div class="weather-forms-container">
+       
+        <div class="weather-form">
+          <h1>Weather Traking</h1>
+          <label for="city">City:</label>
+          <input type="text" id="city" placeholder="Enter the name of the city" />
+          <div id="cityError" class="error-message"></div>
+          <button id="fetchWeatherButton">Get the weather</button>
+        </div>
 
-  <div class="game-info">
-      <h2>Monster</h2>
-      <p>Type: <span id="monster-type"></span></p>
-      <p>Health: <span id="monster-health"></span></p>
-      <p>Strength: <span id="monster-strength"></span></p>
-  </div>
+        <div class="manual-weather-form">
+          <h2>Manual data update</h2>
+          <label for="temperature">Temperature (°C):</label>
+          <input
+            type="number"
+            id="temperature"
+            placeholder="Enter temperature" />
 
-  <div class="actions">
-      <button id="attack-button">Attack</button>
-      <button id="use-item-or-heal-button">Use item or heal</button>
-      <button id="reload-button">Reload</button>
-  </div>
+          <label for="humidity">Humidity (%):</label>
+          <input type="number" id="humidity" placeholder="Enter humidity" />
 
-  <div class="battle-log" id="battle-log"></div>
+          <label for="pressure">Pressure (hPa):</label>
+          <input type="number" id="pressure" placeholder="Enter pressure" />
+          
+          <div id="updateWeatherError" class="error-message"></div>
+
+          <button id="updateWeatherButton">Update data</button>
+        </div>
+      </div>
+
+      <div id="forecast" class="forecast-display"></div>
+
+      <div id="history" class="history-display">
+        <h2>History of weather data</h2>
+        <ul id="historyList"></ul>
+      </div>
+    </div>
   </body>
 </html>
