added task-3 from google docs

--- a/index.html
+++ b/index.html
@@ -9,42 +9,44 @@
   </head>
   <body>
     <div class="container">
-      <div class="weather-forms-container">
-       
-        <div class="weather-form">
-          <h1>Weather Traking</h1>
-          <label for="city">City:</label>
-          <input type="text" id="city" placeholder="Enter the name of the city" />
-          <div id="cityError" class="error-message"></div>
-          <button id="fetchWeatherButton">Get the weather</button>
-        </div>
-
-        <div class="manual-weather-form">
-          <h2>Manual data update</h2>
-          <label for="temperature">Temperature (°C):</label>
-          <input
-            type="number"
-            id="temperature"
-            placeholder="Enter temperature" />
-
-          <label for="humidity">Humidity (%):</label>
-          <input type="number" id="humidity" placeholder="Enter humidity" />
-
-          <label for="pressure">Pressure (hPa):</label>
-          <input type="number" id="pressure" placeholder="Enter pressure" />
-          
-          <div id="updateWeatherError" class="error-message"></div>
-
-          <button id="updateWeatherButton">Update data</button>
-        </div>
+      <div class="task-form">
+        <input
+          type="text"
+          id="taskDescription"
+          placeholder="Task description" />
+        <select id="taskStatus">
+          <option value="new">New</option>
+          <option value="in-progress">In Progress</option>
+          <option value="completed">Completed</option>
+        </select>
+        <select id="taskPriority">
+          <option value="high">High</option>
+          <option value="medium">Medium</option>
+          <option value="low">Low</option>
+        </select>
+        <button id="addTaskBtn">Add task</button>
       </div>
-
-      <div id="forecast" class="forecast-display"></div>
-
-      <div id="history" class="history-display">
-        <h2>History of weather data</h2>
-        <ul id="historyList"></ul>
+      <div class="filters">
+        <select id="filterStatus">
+          <option value="all">All Statuses</option>
+          <option value="new">New</option>
+          <option value="in-progress">In Progress</option>
+          <option value="completed">Completed</option>
+        </select>
+        <select id="filterPriority">
+          <option value="all">All Priorities</option>
+          <option value="high">High</option>
+          <option value="medium">Medium</option>
+          <option value="low">Low</option>
+        </select>
+        <select id="sortOrderSelect">
+          <option value="none">Not sorted</option>
+          <option value="asc">Ascending</option>
+          <option value="desc">Descending</option>
+        </select>
+        <button id="resetFiltersBtn">Reset Filters</button>
       </div>
+      <ul id="taskList"></ul>
     </div>
   </body>
 </html>
